tests/check/illegal_swap.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_swap(u8 [1] i) {
  parallel p by 1 {
    f = dma.any;
    with index in [3] {
      f = dma.copy i => local;
      f1 = dma.copy i => local;
      swap(f, f1);
    }
  }
}

// CHECK: error: swapping values defined in different scopes is forbidden (::illegal_swap{{(::paraby_[0-9]+)*}}::f vs. ::illegal_swap{{(::paraby_[0-9]+)*}}::within_0::f1
